# hotelly2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cloudbuild-production.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  doc_unificado.md
docs/adr/: ADR-000-base-decisions.md  ADR-001-database-cloud-sql.md  ADR-002-ai-model-gemini-2.5-flash.md  (+8 more)
migrations/: env.py  env_helpers.py  script.py.mako
scripts/: context_pack.sh  dev.sh  gate_security_pii.py  generate_test_link.py  migrate_checked_in_to_in_house.py  seed_dev.sql  verify.sh
tests/: conftest.py  helpers.py  test_app_factory.py  test_assign_room_conflict_guard.py  test_auth.py  test_cancellation.py  test_cancellation_policy.py  test_child_policies.py  test_cloud_tasks_backend.py  test_contact_refs.py  test_conversations_inbox_and_send.py  test_convert_hold.py  test_e2e_flow.py  test_evolution_adapter_normalize.py  test_expire_hold.py  test_frontdesk_summary.py  test_governance.py  test_hashing.py  test_health.py  test_hold_enqueue.py  test_holds.py  test_infra_db.py  test_infra_time.py  test_intent_parsing.py  test_me_and_properties.py  test_meta_adapter.py  test_meta_webhook_signature.py  test_migrations_env.py  test_observability.py  test_occupancy.py  test_occupancy_grid.py  test_parsing_children.py  test_payments_read_and_resend.py  test_properties_patch_task.py  test_property_settings.py  test_quality_gates.py  test_quote.py  test_rates_compat.py  test_rbac.py  test_redaction.py  (+25 more)
(+202 files in other folders)
