[project]
name = "hotelly"
version = "0.1.0"
description = "Hotelly V2 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotelly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
